--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@ build/Release
 # Dependency directory
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
-
+docs
 # Users Environment Variables
 .lock-wscript
